# app

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  build_install.py  packup.py
config/: config.json  config.toml  qemu.args  qemu_args  token.list  vmids.json
docker/: run.sh
docker/config/: config.json
install/: Cargo.toml  build.rs
install/src/: loger.rs  main.rs
lib/admin/: index.html  script.js
lib/frontend/: grid.css  index.html  package-lock.json  package.json  script.js  style.css
lib/frontend/css/: grid.css  navbar.css  style.css
lib/frontend/src/: App.css  App.js  index.js
lib/frontend/src/api/: script.js
lib/frontend/src/windows/: script.js  style.css
lib/rocket-websockify/: Cargo.toml
lib/setup/: script.js
src/: about.rs  common.rs  embed.rs  env_logger.rs  main.rs  version.rs
src/admin/: mod.rs
src/common/: mod.rs
src/config/: mod.rs  reformat.rs  token_list.rs  vm_slots.rs
src/config/slots/: mod.rs  vm_slots.rs  vmid.rs
src/config/vmids/: addmutex.rs  make.rs  mod.rs  new.rs  preload.rs
src/embed/: mod.rs
src/execute/: mod.rs
src/pool/: mod.rs
src/setup/: dialog.rs  mod.rs
src/websocket/: mod.rs  setup.rs  stream.rs
static/: index.html  script.js  style.css
static/windows/: script.js  style.css
