[package]
name = "app"
version = "0.3.2"
edition = "2021"
authors = ["Brian gutierrez <luzmsara77@gmail.com>"]
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path = "./lib/Rocket/core/lib", features = ["json","tls"] }
ws = { package = "rocket_ws", path = "./lib/Rocket/contrib/ws" }
serde = { version = "1.0.183", features = ["derive"] }
clap = { version = "4.3.23", features = ["derive"] }
job_scheduler = "1.2.1"
serde_json = "1.0.105"
cfg-if = "1.0.0"
shlex = "1.1.0"
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.0"
