[package]
name = "app"
version = "0.3.3"
edition = "2021"
authors = ["Brian Gutierrez Saravia <luzmsara77@gmail.com>"]
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path = "./lib/Rocket/core/lib", features = ["json","tls"] }
ws = { package = "rocket_ws", path = "./lib/Rocket/contrib/ws" }
serde = { version = "1.0.183", features = ["derive"] }
clap = { version = "4.3.23", features = ["derive"] }
serde_json = "1.0.105"
cfg-if = "1.0.0"
shlex = "1.1.0"
