[package]
name = "install"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"]}
